--- a/src/app/modules/website/components/social-media/social-media.component.html
+++ b/src/app/modules/website/components/social-media/social-media.component.html
@@ -1,1 +1,14 @@
-<p>social-media works!</p>
+<div class="social-media">
+    <div class="facebook">
+        <p>facebook</p>
+    </div>
+    <div class="twitter">
+        <p>twitter</p>
+    </div>
+    <div class="instagram">
+        <p>instagram</p>
+    </div>
+    <div class="whatsapp">
+        <p>whatsapp</p>
+    </div>
+</div>
