--- a/src/app/modules/website/pages/landing/landing.component.html
+++ b/src/app/modules/website/pages/landing/landing.component.html
@@ -1,2 +1,7 @@
-<app-navbar></app-navbar>
-<p>this is landing page...</p>
+<section class="landing">
+    <app-header></app-header>
+    <app-banner></app-banner>
+    <app-home-main></app-home-main>
+    <app-testimonial></app-testimonial>
+    <app-footer></app-footer>
+</section>
