--- a/src/app/modules/website/components/home-main/home-main.component.html
+++ b/src/app/modules/website/components/home-main/home-main.component.html
@@ -1,6 +1,23 @@
 <main class="main">
-    <section class="quote">we build people</section>
-    <section class="achievements">achievements</section>
+    <section class="quote">
+        <h2 class="quote-text-1">WE BUILD PEOPLE</h2>
+        <h2 class="quote-text-2">BEFORE WE BUILD PC</h2><br>
+        <button class="quote-button" style="float: right;">GET QUOTE</button>
+    </section>
+    <section class="achievements">
+        <div class="deliver">
+            <h2>1K+</h2>
+            <h3>PCS DELIVERED</h3>
+        </div>
+        <div class="support">
+            <h2>LIFETIME</h2>
+            <h3>TECH SUPPORT</h3>
+        </div>
+        <div class="hrs">
+            <h2>24 HOURS</h2>
+            <h3>WE TEST, BEFORE DELIVER</h3>
+        </div>
+    </section>
     <section class="carousel">carousel</section>
     <section class="pc-range">pc range</section>
 </main>
