--- a/src/app/modules/website/components/navbar/navbar.component.scss
+++ b/src/app/modules/website/components/navbar/navbar.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 1.75rem;
     .nav-left{
         display: flex;
         .logo img{
