--- a/src/app/modules/website/components/home-main/home-main.component.html
+++ b/src/app/modules/website/components/home-main/home-main.component.html
@@ -1,23 +1,46 @@
 <main class="main">
     <section class="quote">
-        <h2 class="quote-text-1">WE BUILD PEOPLE</h2>
-        <h2 class="quote-text-2">BEFORE WE BUILD PC</h2><br>
-        <button class="quote-button" style="float: right;">GET QUOTE</button>
+        <h2 class="quote-text-1">WE BUILD PEOPLE,</h2>
+        <div class="quote-text-2-bg">
+            <h2 class="quote-text-2">BEFORE WE BUILD PC</h2><br>
+        </div>
+        <button class="quote-button">GET QUOTE</button>
     </section>
     <section class="achievements">
-        <div class="deliver">
-            <h2>1K+</h2>
-            <h3>PCS DELIVERED</h3>
-        </div>
-        <div class="support">
-            <h2>LIFETIME</h2>
-            <h3>TECH SUPPORT</h3>
-        </div>
-        <div class="hrs">
-            <h2>24 HOURS</h2>
-            <h3>WE TEST, BEFORE DELIVER</h3>
+        <div class="row">
+            <div class="deliver col-md-4">
+                <h2>1K+</h2>
+                <h3>PCS DELIVERED</h3>
+            </div>
+            <div class="support col-md-4">
+                <h2>LIFETIME</h2>
+                <h3>TECH SUPPORT</h3>
+            </div>
+            <div class="hrs col-md-4">
+                <h2>24 HOURS</h2>
+                <h3>WE TEST, BEFORE DELIVER</h3>
+            </div>
         </div>
     </section>
-    <section class="carousel">carousel</section>
-    <section class="pc-range">pc range</section>
+    <section class="carousel">
+        <p>carousel</p>
+        <button class="view-all-button">VIEW ALL</button>
+    </section>
+    <section class="pc-range">
+        <div class="row">
+            <div class="entry col-md-4">
+                <img class="entry-img" src="../../../../../assets/images/ENTRY-LEVEL.png" alt="entry-level-pc">
+                <span class="entry-txt txt">ENTRY LEVEL</span>
+            </div>
+            <div class="mid col-md-4">
+                <img class="mid-img" src="../../../../../assets/images/MID-RANGE.png" alt="entry-level-pc">
+                <span class="mid-txt txt">MID RANGE</span>
+            </div>
+            <div class="pcmr col-md-4">
+                <img class="pcmr-img" src="../../../../../assets/images/PCMR.png" alt="entry-level-pc">
+                <span class="pcmr-txt txt">PCMR</span>
+            </div>
+        </div>
+        <button class="pre-builds-button">PRE BUILDS</button>
+    </section>
 </main>
