--- a/src/app/modules/website/components/social-media/social-media.component.html
+++ b/src/app/modules/website/components/social-media/social-media.component.html
@@ -1,14 +1,15 @@
 <div class="social-media">
+    <!-- <img src="../../../../../assets/images/SOCIAL-MEDIA.png" alt=""> -->
     <div class="facebook">
-        <p>facebook</p>
+        <i class="fab fa-facebook"></i>
     </div>
     <div class="twitter">
-        <p>twitter</p>
+        <i class="fab fa-twitter"></i>
     </div>
     <div class="instagram">
-        <p>instagram</p>
+        <i class="fab fa-instagram"></i>
     </div>
     <div class="whatsapp">
-        <p>whatsapp</p>
+        <i class="fab fa-whatsapp"></i>
     </div>
 </div>
