--- a/src/app/modules/website/components/social-media/social-media.component.scss
+++ b/src/app/modules/website/components/social-media/social-media.component.scss
@@ -1,4 +1,11 @@
 .social-media{
     display: flex;
     gap: 20px;
+    img{
+        height: 50px;
+    }
+    i{
+        color: white;
+        size: 2rem;
+    }
 }
