--- a/src/app/modules/website/components/testimonial/testimonial.component.html
+++ b/src/app/modules/website/components/testimonial/testimonial.component.html
@@ -1,1 +1,29 @@
-<p>testimonial works!</p>
+<section class="testimonial">
+    <div class="row">
+
+        <div class="google-reviews card col-md-5">
+            <div class="head">
+                <h4>GOOGLE REVIEWS</h4>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi est explicabo provident deserunt in
+                blanditiis incidunt quam sunt. Quisquam, aspernatur!</p>
+            <div class="star-rating">
+                <i class="fa fa-star star-icon" *ngFor="let item of [1,2,3,4,5]"></i>
+            </div>
+
+        </div>
+        <div class="solder-support card col-md-5">
+            <div class="row head">
+                <div class="col-8">
+                    <h4>#SOLDER SUPPORT</h4>
+                </div>
+                <div class="col-4">
+                    <button class="view-all-btn">VIEW ALL</button>
+                </div>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi est explicabo provident deserunt in
+                blanditiis incidunt quam sunt. Quisquam, aspernatur!</p>
+            <p class="reviewer">RAJU BHAI, CHENNAI</p>
+        </div>
+    </div>
+</section>
