--- a/src/app/modules/website/components/navbar/navbar.component.html
+++ b/src/app/modules/website/components/navbar/navbar.component.html
@@ -4,19 +4,19 @@
             <img src="../../../../../assets/images/A2D-PC-FAC-LOGO.png" alt="">
             <span class="logo-text">A2D PC FACTORY</span>
         </div>
-        <ul class="nav-list">
-            <li class="nav-item"><a href="#">GET QUOTE</a></li>
-            <li class="nav-item"><a href="#">PRE BUILDS</a></li>
-            <li class="nav-item"><a href="#">ABOUT US</a></li>
+        <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav">
+            <li class="nav-item"><a class="nav-link py-2 px-0 px-lg-2" href="#">GET QUOTE</a></li>
+            <li class="nav-item"><a class="nav-link py-2 px-0 px-lg-2" href="#">PRE BUILDS</a></li>
+            <li class="nav-item"><a class="nav-link py-2 px-0 px-lg-2" href="#">ABOUT US</a></li>
         </ul>
     </div>
     <div class="nav-right">
         <div class="cart-logo">
             <img src="../../../../../assets/images/CART.png" alt="">
         </div>
-        <ul class="log-in">
-            <li class="login-link">
-                <a href="#" >LOGIN/SIGN UP</a>
+        <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link py-2 px-0 px-lg-2" href="#" >LOGIN/SIGN UP</a>
             </li>
         </ul>
     </div>
