--- a/src/app/modules/website/layouts/footer/footer.component.html
+++ b/src/app/modules/website/layouts/footer/footer.component.html
@@ -1,6 +1,7 @@
 <section class="footer">
     <div class="copy-rights">
-        <p>2021 A2D PC FACTORY|All rights received</p>
+        <p>&copy; {{latestYear}} A2D PC FACTORY | All rights received</p>
+        
     </div>
     <app-social-media></app-social-media>
 </section>
